--- a/test.html
+++ b/test.html
@@ -30,7 +30,7 @@
 	</style>
 </head>
 <body>
-	<!-- <h2 class="fontFace_ie">迷你简柏青字体,这是一个测试，欢迎光临<br>123456890asdfghj<br>kASDFGHJKL</h2> -->
+	<h2 class="fontFace_ie">迷你简柏青字体,这是一个测试，欢迎光临<br>123456890asdfghj<br>kASDFGHJKL</h2>
 	<h2 class="fontFace">迷你简柏青字体,这是一个测试，欢迎光临<br>123456890asdfghjk<br>ASDFGHJKL</h2>
 </body>
 </html>
