解决了编号为101的BUG

--- a/d.html
+++ b/d.html
@@ -7,7 +7,6 @@
 
     <body>
     你好，世界,Hello Git. <br />
-    快乐的使用Git版本控制 <br />
-    使用 git stash 储藏某一个版本，再用git checkout -b issue-101 来创建一个新的分支，并在此分支上解决bug.
+    快乐的使用Git版本控制
     </body>
 </html>
