--- a/b.html
+++ b/b.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Untitled Document</title>
     </head>
-    
+    你好，我是B!
     <body>
     </body>
 </html>
