--- a/user.html
+++ b/user.html
@@ -4,8 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>这是用户模块</title>
     </head>
-    小伙伴说，早餐时间到了。
+    
     <body>
-    我觉得现在吃早餐有点儿早了。
+    小伙伴说，早餐时间到了。(原来我写错地方了)我觉得现在吃早餐有点儿早了。
     </body>
 </html>
