--- a/user.html
+++ b/user.html
@@ -4,8 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>这是用户模块</title>
     </head>
-    小伙伴说，早餐时间到了。
+    
     <body>
-    我觉得现在吃早餐有点儿早了。
+    我觉得现在吃早餐有点儿早了。 这也太夸张了，新修改
+    好东西，要大家分享，我要深入理解 git 操作规则 
     </body>
 </html>
